--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "parcel-bundler": "^1.12.0"
   },
   "scripts": {
-    "dev": "parcel public/index.html",
-    "build": "parcel build public/index.html --public-url ./"
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html --public-url ./"
   }
 }
