--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "main": "public/index.html",
   "author": "brian pursell",
   "license": "MIT",
-  "dependencies": {
-    "parcel-bundler": "^1.12.0"
-  },
   "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url ./"
+    "start": "webpack-dev-server",
+    "build": "webpack --mode=production"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   }
 }
